# src/models/tracking.py
@@ -2,7 +2,7 @@ from __future__ import annotations
 
 from helpers.db import db
 from typing import List, Dict
-import datetime
+from datetime import datetime
 
 from models.reception import ReceptionModel
 
@@ -59,7 +59,8 @@ class TrackingModel(db.Model):
 
     @classmethod
     def find_by_attributes(cls, limit: int = None, offset: int = None, destination_id: int = None, specimen_id: int = None, reviewed: bool = None,
-        person_id: int = None, animalType_id: int = None, species_id: int = None, gender_id: int = None, age_id: int = None, folio: str = None) -> List:
+        person_id: int = None, animalType_id: int = None, species_id: int = None, gender_id: int = None, age_id: int = None, folio: str = None,
+        date_from: datetime = None, date_to: datetime = None) -> List:
 
         tracking = cls.query
         if person_id or animalType_id or species_id or gender_id or age_id or folio:
@@ -82,6 +83,10 @@ class TrackingModel(db.Model):
             tracking = tracking.filter_by(age_id=age_id)
         if folio:
             tracking = tracking.filter_by(folio=folio)
+        if date_from:
+            tracking = tracking.filter(cls.created_at >= date_from)
+        if date_to:
+            tracking = tracking.filter(cls.created_at <= date_to)
         if limit:
             tracking = tracking.limit(limit)
         if offset:
